--- a/about.org
+++ b/about.org
@@ -1,8 +1,7 @@
 #+TITLE: About
 #+OPTIONS: H:3 num:nil toc:nil \n:nil ::t |:t ^:nil -:nil f:t *:t <:t
 
-
-* About Edgar Aroutiounian
 I'm a 25 year old computer programmer in San Francisco. My
 undergraduate was in Philosophy but I found coding to be much more
-enjoyable and lucrative. 
+enjoyable and lucrative. My preference is for functional programming,
+I'm lucky enough that I write OCaml everyday.
