--- a/about.org
+++ b/about.org
@@ -3,5 +3,5 @@
 
 I'm a 25 year old computer programmer in San Francisco. My
 undergraduate was in Philosophy but I found coding to be much more
-enjoyable and lucrative. My preference is for functional programming,
-I'm lucky enough that I write OCaml everyday.
+enjoyable and lucrative. My preference is for functional programming
+and I'm lucky enough that I write OCaml everyday.
