--- a/index.org
+++ b/index.org
@@ -1,4 +1,5 @@
-#+TITLE: Splash
+#+TITLE: Здравствуйте
+#+OPTIONS: H:3 num:nil toc:nil \n:nil ::t |:t ^:nil -:nil f:t *:t <:t
 
 I like to blog about [[https://www.gnu.org/software/emacs/][emacs]], [[https://ocaml.org/][OCaml]] and anything else that happens to
 come to mind.
