--- a/blog/new_blogging.org
+++ b/blog/new_blogging.org
@@ -12,4 +12,4 @@
 Blogging is usually a pleasurable experience, it's a good way to know
 whether you know whatever it is you actually claim to know. Previously
 I was using [[http://octopress.org/][octopress]] paired with [[http://orgmode.org/][org-mode]] and it was fairly
-decent.
+decent although the emacs configuration was painful at times.
