--- a/about.org
+++ b/about.org
@@ -5,3 +5,5 @@ I'm a 25 year old computer programmer in San Francisco. My
 undergraduate was in Philosophy but I found coding to be much more
 enjoyable and lucrative. My preference is for functional programming
 and I'm lucky enough that I write OCaml everyday.
+
+[[./static/img/blog_me.jpg]]
