--- a/blog/new_blogging.org
+++ b/blog/new_blogging.org
@@ -27,4 +27,12 @@ and even worse I'd be learning how the sausage is made for a project
 that I don't really care about. Where's the abstraction then? I always
 like using technologies and languages that I already know, of
 course. So naturally I wanted an emacs based solution and emacs offers
-a great mode called org-mode. I looked at this 
+a great mode called org-mode. I looked at [[http://orgmode.org/worg/org-blog-wiki.html][this]] and tried most of the
+listed libraries/packages/frameworks. Unfortunately the vast majority
+were either abandoned or broken but I did finally find [[https://github.com/kelvinh/org-page][org-page]] and
+I'm using that now. I like it because its lightweight, based on
+org-mode and has a simple publishing model, no crazy Rakefiles, no
+build systems. I'll be porting over my previous three blog posts over
+here as well and I expect to write on topics more than just
+programming/coding. As always feel free to leave comments and
+questions.
