--- a/about.org
+++ b/about.org
@@ -1,5 +1,6 @@
 #+AUTHOR:   Edgar Aroutiounian
 #+EMAIL:    edgar.factorial@gmail.com
+#+TITLE: ""
 #+LANGUAGE: en
 #+STARTUP: indent
 #+OPTIONS:  toc:nil num:0
