--- a/blog/setup_emacs_linux.org
+++ b/blog/setup_emacs_linux.org
@@ -102,4 +102,4 @@ VM and calls ~os-s~. You'll notice some commented out code, the first
 was some time wasted with tramp and the second was trying to use an
 alias in the remote shell, hint: it didn't work. 
 
-That's it for this post. Part two will relate to gnu global/helm.
+That's it for this post. [[http://hyegar.com/blog/2015/09/11/emacs-for-linux-coding-part-ii/][Part Two]] relates to gnu global/helm.
