--- a/blog/cool_latex.org
+++ b/blog/cool_latex.org
@@ -99,7 +99,7 @@ easily done with ~C-c C-x C-l~, here's an example I did inside a
 buffer: 
 #+CAPTION: Cool Math symbols.
 #+ATTR_HTML: :align:center
-[[./assets/latex_preview.png]]
+[[/assets/latex_preview.png]]
 
 Just to let you know my work-flow, I usually have a buffer open with
 the PDF of my work and another buffer of my ~.org~ file. Then I export
@@ -140,7 +140,7 @@ completely self contained in the PDF. Here is an example that I did,
 please excuse the poor ~gif~ quality. 
 
 #+ATTR_HTML: :align:center
-[[./assets/animation_in_pdf.gif]]
+[[/assets/animation_in_pdf.gif]]
 
 And there you go, a real animation with very little effort and all
 done via emacs. 
