--- a/blog/cool_latex.org
+++ b/blog/cool_latex.org
@@ -95,11 +95,7 @@ last ~p~ can be replaced with ~o~ to open the newly created
 PDF. Another neat thing in org mode that I like is seeing LaTeX before
 its a PDF, that is, I want to preview the LaTeX inside the
 buffer. This, assuming you already have ~imagemagick~ installed, is
-easily done with ~C-c C-x C-l~, here's an example I did inside a
-buffer: 
-#+CAPTION: Cool Math symbols.
-#+ATTR_HTML: :align:center
-[[/assets/latex_preview.png]]
+easily done with ~C-c C-x C-l~.
 
 Just to let you know my work-flow, I usually have a buffer open with
 the PDF of my work and another buffer of my ~.org~ file. Then I export
@@ -136,18 +132,11 @@ needed.
    all the details.
 
 After exporting the PDF, you'll have a real animation that is
-completely self contained in the PDF. Here is an example that I did,
-please excuse the poor ~gif~ quality. 
-
-#+ATTR_HTML: :align:center
-[[/assets/animation_in_pdf.gif]]
-
-And there you go, a real animation with very little effort and all
-done via emacs. 
+completely self contained in the PDF. 
 
 *Note:* The Preview.app on OS X is kind of crappy and doesn't actually
- animate the graphic for reasons unknown to me, I recommend you use
- Adobe Reader.
+animate the graphic for reasons unknown to me, I recommend you use
+Adobe Reader.
 
 I hope this post helps makes your papers all that more exciting and
 rewarding.
