--- a/blog/ocaml_love.org
+++ b/blog/ocaml_love.org
@@ -39,23 +39,24 @@ Here's an example straight from my bindings to libmaxminddb
 #+BEGIN_SRC ocaml
 (* File named loc_dump.ml *)
 #require "maxminddb"
-let () = 
+
+let () =
   let some_ip = "172.56.31.240" in
-  Maxminddb.with_mmdb "etc/GeoLite2-City.mmdb" begin fun this_mmdb ->
-    let loc = Maxminddb.location some_ip this_mmdb in
-    let open Maxminddb in
-    Printf.sprintf "%f %f %d %s" loc.latitude loc.longitude loc.metro_code loc.time_zone
-    |> print_endline;
-    let geo_borders = borders ~lang:French ~ip:some_ip this_mmdb in
-    Printf.sprintf
-      "%s %s %s %s %s"
-      geo_borders.postal_code
-      geo_borders.city_name
-      geo_borders.country_name
-      geo_borders.continent_name
-      geo_borders.iso_code
+  let this_mmdb = Maxminddb.create "etc/GeoLite2-City.mmdb" in
+  let loc = Maxminddb.location some_ip this_mmdb in
+  let open Maxminddb in
+  Printf.sprintf "%f %f %d %s" loc.latitude loc.longitude loc.metro_code loc.time_zone
+  |> print_endline;
+  let geo_borders = borders ~lang:French ~ip:some_ip this_mmdb in
+  Printf.sprintf
+    "%s %s %s %s %s"
+    geo_borders.postal_code
+    geo_borders.city_name
+    geo_borders.country_name
+    geo_borders.continent_name
+    geo_borders.iso_code
   |> print_endline
-  end
+
 #+END_SRC 
 
 And the corresponding result on the shell
