--- a/blog/monads_you_can_understand.org
+++ b/blog/monads_you_can_understand.org
@@ -16,16 +16,16 @@ practice first, then we can come back to theory.
 (I'll be writing to an OCaml audience mainly, but the Monad idea
 should be understandable anyway)
 
-As Bryan O'Sullivan said once "...we need something that's non-trivial
-but still chewey." So we'll build a real working example in OCaml that
-will be the starting point of a library to the [[https://stripe.com/docs/api][Stripe API]] and it will
-use monads.
+As Bryan O'Sullivan said (From Real World Haskell) "...we need
+something that's non-trivial but still chewey." So we'll build a real
+working example in OCaml that will be the starting point of a library
+to the [[https://stripe.com/docs/api][Stripe API]] and it will use monads.
 
 * Prereqs
 We need to make sure we have all the same starting point for this
 code, I assume you have [[https://opam.ocaml.org][opam]] installed. Now do:
 #+BEGIN_SRC shell
-$ opam install lwt cohttp.lwt yojson uri
+$ opam install lwt.unix cohttp.lwt yojson uri
 #+END_SRC
 These are the libaries we will use: ~lwt~ is for threading,
 ~cohttp.lwt~ is for our HTTP requests, ~uri~ for handling URIs and
@@ -41,14 +41,15 @@ how to create the "Charge" object. From there we see we need to do a
 arguments:
 
 1) The amount to charge
-2) The ISO code for currency
-3) Either the Customer or Source (perfect use-case for a variant,
-   we'll use polymorphic variants)
-
+2) The ISO code for currency (a perfect use-case for a variant, we'll
+   use polymorphic variants for this)
+3) Either the Customer or Source, (this will also use polymorphic
+   variants)
+   
 All of Stripe's API returns JSON, so we can already sketch out our
 function's signature and helper data structure, something like:
 #+BEGIN_SRC ocaml
-type t = { authed_headers: Cohttp.Headers.t; 
+type t = { authed : Cohttp.Headers.t; 
            end_point : string; }
 
 val make_handle : unit -> t
@@ -71,20 +72,23 @@ let make_handle () =
     Cohttp.Auth.credential_of_string ("Bearer " ^ k)
     |> Cohttp.Header.add_authorization starter
   in
-  {authed_headers = auth_me "YOUR STRIPE KEY"; 
+  {authed = auth_me "YOUR STRIPE KEY"; 
    (** Hardcoding to the charge create path *)
    end_point = "https://api.stripe.com/v1/charges"}
 #+END_SRC
 This creates our record needed for making a post. Stripe requires a
 key in each request, so we just make this record to encapsulate that
-other wise boilerplate code we'd have to do instead. Now the
-~create_charge~ function:
-#+BEGIN_SRC ocaml
+other wise boilerplate code we'd have to do instead. Now the first cut
+of out ~create_charge~ function:
+#+BEGIN_SRC ocaml -n
 let create_charge amount currency source handle = 
   let this_uri = Uri.of_string handle.end_point in
   [("amount", string_of_int amount);
    ("currency", currency);]
-
-
+   ("source", source)]
+  |> Uri.add_query_params' this_uri
+  |> Cohttp_lwt_unix.Client.post ~headers:handle.authed >>= fun (resp, body) -> 
+  Cohttp_lwt_body.to_string body >|= Yojson.Basic.from_string
 #+END_SRC
+Okay, so what the hell is going on.
 
