--- a/blog/monads_you_can_understand.org
+++ b/blog/monads_you_can_understand.org
@@ -82,13 +82,15 @@ other wise boilerplate code we'd have to do instead. Now the first cut
 of out ~create_charge~ function:
 #+BEGIN_SRC ocaml -n
 let create_charge amount currency source handle = 
+  let open Cohttp_lwt_unix in
   let this_uri = Uri.of_string handle.end_point in
   [("amount", string_of_int amount);
    ("currency", currency);]
    ("source", source)]
   |> Uri.add_query_params' this_uri
-  |> Cohttp_lwt_unix.Client.post ~headers:handle.authed >>= fun (resp, body) -> 
-  Cohttp_lwt_body.to_string body >|= Yojson.Basic.from_string
+  |> Client.post ~headers:handle.authed >>= fun (resp, body) -> 
+  Cohttp_lwt_body.to_string body >|= 
+  Yojson.Basic.from_string
 #+END_SRC
 Okay, so what the hell is going on.
 
