finished blog post

--- a/blog/monads_you_can_understand.org
+++ b/blog/monads_you_can_understand.org
@@ -11,9 +11,10 @@
 
 Let's learn about monads as programmers, that is let's use them for
 building something and in the process we'll build up a intuition;
-practice first, then we can come back to theory.
+practice first, then you can go back to theory later.
 
-This post is split in two parts: 
+This post is split in two parts:
+
 Part 1 is just to get the ideas out the door
 
 Part 2 (Currently not written) is for an OCaml audience,
@@ -244,8 +245,10 @@ $ ./T
   }
 }
 #+END_SRC
+Yay success.
 
 * Moral of the Story
 So in terms of actually day to day coding, you don't actually need to
 know what a monad "is", you just need to know how to use it and
-honestly that's completely fine.
+honestly that's completely fine, in fact just following the type
+signatures can take you pretty far in a new, unfamiliar library.
