--- a/blog/monads_you_can_understand.org
+++ b/blog/monads_you_can_understand.org
@@ -100,6 +100,10 @@ let create_charge amount currency source handle =
   |> Uri.add_query_params' this_uri
   |> Client.post ~headers:handle.authed >>= 
      fun (resp, body) -> 
+     (* This can also be done more succinctly
+        with:
+        Cohttp_lwt_body.to_string body >|=
+        Yojson.Basic.from_string  *)
      Cohttp_lwt_body.to_string body >>= fun j -> 
      Yojson.Basic.from_string j |> return
 #+END_SRC
