--- a/OCamlDocs/index.org
+++ b/OCamlDocs/index.org
@@ -1,9 +1,9 @@
 #+AUTHOR:   Edgar Aroutiounian
 #+EMAIL:    edgar.factorial@gmail.com
+#+URI:      /ocamldocs/
 #+LANGUAGE: en
 #+STARTUP: indent
-#+LATEX_HEADER: \usepackage{lmodern}
-#+LATEX_HEADER: \usepackage[T1]{fontenc}
+#+TITLE:    Generated OCaml Documentation
 #+OPTIONS:  toc:nil num:0
 
 Test code
