--- a/blog/so_youre_learning_ocaml.org
+++ b/blog/so_youre_learning_ocaml.org
@@ -118,8 +118,8 @@ Loads.
 4) Kernels: Unikernels are hot right now, the most prominent one is
    the Mirage-OS project and its all OCaml.
 5) Shameless plug: I use OCaml as well for ~js_of_ocaml~, in fact I'm
-   using it to write an Electron app with a node backend. (All code is
-   OCaml compiled into JS, then run on node/Electron)
+   using it to write an Electron app with a node backend (All code is
+   OCaml compiled into JS, then run on node/Electron).
 6) Genomics/Bioinformatics: Hammer Labs in NYC uses OCaml for their
    genomics/sequencing work.
 
